--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,7 @@ ga('send', 'pageview');
 <script src="app/services/navigationService.js"></script>
 <script src="app/services/config.js"></script>
 <script src="app/services/surveyTypeService.js"></script>
+<script src="app/services/datePickerService.js"></script>
 <script src="app/directives/userForm.js"></script>
 <script src="app/controllers/censusdata/create.js"></script>
 <!-- endbuild -->
